2005-06-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (Module): announce .30

	* site/install/devel.ihtml: typo. Update to 30. FC4 now.

2005-06-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: change to versioned windows links.

2005-06-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/index.html: Add stable/development/old branch to
	headers.

2005-06-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: announce .29 for mac too.

	* GNUmakefile (upload): separate rule for permissions.
	
2005-06-07  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (Preferably): typo.

2005-06-04  Graham Percival  <gperlist@shaw.ca>

	* site/devel/participating/documentation-adding.html: update
	info about adding docs to make it as friendly as possible.

2005-06-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* nl/index.html: zinsbouw.

2005-06-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* nl/index.html: various fixes of the Dutch translation. 

2005-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/format-page.py (grab_ihtml): Oops look in topdir too.

2005-05-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: add upgrade link.

	* site/install/windows.html: mention Cygwin.

	* site/install/macos.html:  mention Fink.

	* site/install/menu-entries.py: change entry names. to Fink/Cygwin. 

	* site/install/devel.ihtml: change to .dmg 

2005-05-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* nl/install/*html: Use utf-8.

2005-05-31  Graham Percival  <gperlist@shaw.ca>

	* site/documentation.html: add link to LSR.

2005-05-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* README: reorganize a bit, use <MY-LANGUAGE> for nl.

2005-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/format-page.py (grab_gettext*): New functions.

	* site/install/*ihtml: Fix localisations.

2005-05-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* GNUmakefile (upload): encapsulate CVS upload by CVS_COMMIT variable.
